Exercise A2 - Reviewing and creating groups and users

--- a/AlloyDemo/appsettings.Development.json
+++ b/AlloyDemo/appsettings.Development.json
@@ -15,10 +15,16 @@
       "MappedRoles": {
         "Items": {
           "CmsEditors": {
-            "MappedRoles": [ "WebEditors", "WebAdmins" ]
+            "MappedRoles": [ "WebEditors", "AccessToEditView" ]
           },
           "CmsAdmins": {
-            "MappedRoles": [ "WebAdmins" ]
+            "MappedRoles": [ "WebAdmins", "AccessToAdminView" ]
+          },
+          "EPiBetaUsers": {
+            "MappedRoles": [ "Developers" ]
+          },
+          "VisitorGroupAdmins": {
+            "MappedRoles": [ "Personalizers" ]
           }
         }
       }
