Exercise A4 - Personalising and approving content

--- a/AlloyDemo/AlloyDemo.csproj
+++ b/AlloyDemo/AlloyDemo.csproj
@@ -15,6 +15,7 @@
   <ItemGroup>
     <PackageReference Include="EPiServer.CMS" Version="12.18.0" />
     <PackageReference Include="EPiServer.Forms" Version="5.5.1" />
+    <PackageReference Include="EPiServer.Personalization.MaxMindGeolocation" Version="2.3.0" />
     <PackageReference Include="Wangkanai.Detection" Version="5.2.0" />
   </ItemGroup>
   
