--- a/AlloyDemo/appsettings.Development.json
+++ b/AlloyDemo/appsettings.Development.json
@@ -15,7 +15,13 @@
       "MappedRoles": {
         "Items": {
           "CmsEditors": {
-            "MappedRoles": [ "WebEditors", "AccessToEditView" ]
+            "MappedRoles": [
+              "AccessToEditView",
+              "CLevelExecs",
+              "Lawyers",
+              "NewsEditors",
+              "WebEditors"
+            ]
           },
           "CmsAdmins": {
             "MappedRoles": [ "WebAdmins", "AccessToAdminView" ]
@@ -24,7 +30,7 @@
             "MappedRoles": [ "Developers" ]
           },
           "VisitorGroupAdmins": {
-            "MappedRoles": [ "Personalizers" ]
+            "MappedRoles": [ "Personalizers", "Marketers" ]
           }
         }
       }
