Exervise A5 - Localizing content

--- a/AlloyDemo/appsettings.Development.json
+++ b/AlloyDemo/appsettings.Development.json
@@ -12,6 +12,9 @@
   },
   "EPiServer": {
     "Cms": {
+      "GlobalizationSettings": {
+        "UseBrowserLanguagePreferences": true
+      },
       "MappedRoles": {
         "Items": {
           "CmsEditors": {
